--- a/styles.css
+++ b/styles.css
@@ -234,12 +234,12 @@ body {
       margin: auto;
     }
     
-    /* .section-title {
+    .section-title {
       font-size: 1.75rem;
       font-weight: 700;
       margin-bottom: 2rem;
       text-align: center;
-    } */
+    }
     
     .team-member {
       background: white;
